# tempsh-cli

./: .gitattributes  LICENSE  README.md  pyproject.toml
src/tempsh_cli/: __init__.py  cli.py
