[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tempsh-cli"
version = "1.0.1"
description = "temporary file upload cli tool"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Uzair Mughal", email = "contact@uzair.is-a.dev"}
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
progress = ["requests-toolbelt>=0.9.0"]

[project.scripts]
tempsh-cli = "tempsh_cli:main"

[project.urls]
Homepage = "https://github.com/uzairdeveloper223/tempsh-cli"
Repository = "https://github.com/uzairdeveloper223/tempsh-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tempsh_cli"]
